# better-backgrounds

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  pysidedeploy.spec  runtime-manifest.json
.github/workflows/: ci.yml  release.yml
contracts/v1/: invalid-events.json  job-event.schema.json  valid-events.json
packaging/: RELEASE_NOTES.md  build_icons.py  configure_spec.py  stage_release.py  verify_archive.py
packaging/macos/: Unlock and Open.command
packaging/windows/: FIRST-RUN.txt
renderer/: rollup.config.mjs
renderer/src/: gpu-depth.mjs  live.mjs  main.mjs  matting-worker.mjs  matting.mjs  viewpoint.mjs
renderer/tests/: depth-effects.test.mjs  matting.test.mjs  run.mjs  scene-frame.test.mjs  viewpoint.test.mjs
scripts/: judge-setup.ps1  judge-setup.sh  setup-and-run.ps1
src/better_backgrounds/: __init__.py  build_session.py  checkpoints.py  cli.py  compositor.py  fake_worker.py  frame_ring.py  harmonization.py  harmonizer_runtime.py  job_runner.py  live_matting.py  managed_tools.py  matanyone_runtime.py  matting.py  matting_benchmark.py  matting_engine.py  matting_worker.py  model_setup.py  ndjson.py  protocol.py  pycolmap_worker.py  reconstruction.py  reconstruction_worker.py  scene.py  sharp.py  sharp_runtime.py  sharp_worker.py  video_analysis.py
src/better_backgrounds/_vendor/: __init__.py
src/better_backgrounds/_vendor/harmonizer/: UPSTREAM.md  __init__.py  model.py
src/better_backgrounds/_vendor/matanyone2/: UPSTREAM.md
src/better_backgrounds/_vendor/pih/: UPSTREAM.md  __init__.py  model.py
src/better_backgrounds/_vendor/sharp/: UPSTREAM.md
src/better_backgrounds/assets/: native-tools-v1.json  sample-scenes-v1.json
src/better_backgrounds/assets/matanyone2/: manifest-v1.json  matanyone2.pth
src/better_backgrounds/assets/pih/: manifest-v1.json
src/better_backgrounds/assets/sharp/: manifest-v1.json
src/better_backgrounds/desktop/: __init__.py  __main__.py  app.py  bridge.py  camera_capture.py  first_run.py  icon.py  live_preview.py  main_window.py  pages.py  preview.py  startup.py  theme.py  virtual_camera.py  webview.py
src/better_backgrounds/desktop/assets/: THIRD_PARTY_NOTICES.md  app-icon.icns  background.html  live-renderer.js  live.html  matting-worker.js  renderer.js  viewer.html
src/better_backgrounds/desktop/assets/matting/: THIRD_PARTY_NOTICES.md  manifest-v1.json
src/better_backgrounds/desktop/camera/: __init__.py  capture.py  devices.py  room_capture.py
src/better_backgrounds/desktop/live_preview/: __init__.py  composition.py  preview.py  seed.py  surface.py
src/better_backgrounds/desktop/main_window/: __init__.py  build_controller.py  header.py  live_preview_controller.py  main.py
src/better_backgrounds/desktop/pages/: __init__.py  adjust.py  build.py  common.py  compare.py  show.py
src/better_backgrounds/harmonization/: __init__.py  checkpoint.py  contracts.py  filters.py  pih.py  runtime.py
src/better_backgrounds/jobs/: __init__.py  build_session.py  events.py  fake_worker.py  runner.py
src/better_backgrounds/matting/: __init__.py  accelerated.py  benchmark.py  calibration.py  compositor.py  contracts.py  engine.py  preferences.py  quality.py  refinement.py  ring.py  runtime.py  seed.py  worker.py
src/better_backgrounds/matting/assets/: manifest-v1.json
src/better_backgrounds/reconstruction/: __init__.py  images.py  splat_worker.py  splats.py  ssog.py
src/better_backgrounds/reconstruction/sharp/: __init__.py  builder.py  checkpoint.py  contracts.py  ply.py  runtime.py  worker.py
src/better_backgrounds/scene/: __init__.py  assets.py  catalogue.py  library.py  models.py  resolver.py  selection.py  snapshots.py  viewpoints.py
tests/: conftest.py  test_build_session.py  test_checkpoints.py  test_cli_phase4.py  test_desktop.py  test_frame_ring.py  test_harmonization.py  test_harmonizer_filters.py  test_harmonizer_runtime.py  test_input_camera.py  test_job_runner.py  test_live_desktop.py  test_live_matting.py  test_managed_tools.py  test_matte_refinement.py  test_matting.py  test_matting_benchmark.py  test_matting_quality.py  test_model_setup.py  test_native_compositor.py  test_ndjson.py  test_package.py  test_protocol.py  test_pycolmap_worker.py  test_reconstruction.py  test_scene.py  test_seed_mask.py  test_sharp.py  test_video_analysis.py
tests/desktop/: test_build_page.py  test_desktop.py  test_live_desktop.py  test_startup.py  test_virtual_camera.py
tests/desktop/camera/: test_input_camera.py  test_room_capture.py
tests/desktop/live_preview/: test_acquisition.py  test_composition.py  test_depth_refresh.py
tests/desktop/main_window/: test_build_controller.py  test_live_preview_controller.py
tests/fixtures/: test-scene.ply  test-scene.sog
tests/harmonization/: test_filters.py  test_pih.py  test_runtime.py
tests/jobs/: test_build_session.py  test_job_runner.py  test_ndjson.py  test_protocol.py
tests/matting/: test_calibration_cache.py  test_frame_ring.py  test_live_matting.py  test_matte_refinement.py  test_matting.py  test_matting_benchmark.py  test_matting_quality.py  test_native_compositor.py  test_retained_engine.py  test_seed_mask.py
tests/reconstruction/: test_sharp.py  test_splats.py
tests/scene/: test_library.py  test_scene.py  test_snapshots.py
