[project]
name = "better-backgrounds"
version = "0.1.0"
description = "Local tooling for the Better Backgrounds desktop application"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.5.1",
    "opencv-python-headless>=5.0.0.93",
    "platformdirs>=4.5.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pycolmap==4.1.0",
    "pyside6>=6.10.2",
    "typer>=0.21.0",
]

[project.scripts]
better-backgrounds = "better_backgrounds.cli:app"

[project.gui-scripts]
better-backgrounds-desktop = "better_backgrounds.desktop.app:main"

[dependency-groups]
dev = [
    "nuitka==4.1.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty==0.0.59",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
]
extend-exclude = [
    ".cache",
    ".pytest-temp",
    ".tools",
    "artifacts",
    "jobs",
    "media",
    "models",
    "reconstructions",
    "samples/downloads",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the formatter's handling of trailing commas.
    "D203",   # Conflicts with the preferred no-blank-line D211 convention.
    "D213",   # Conflicts with the preferred summary-on-first-line D212 convention.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "INP001", # Tests are not an importable production package.
    "S101", # Assertions are pytest's native verification mechanism.
]
"src/better_backgrounds/desktop/webview.py" = [
    "N802", # Qt virtual methods use the framework's camelCase API.
]
"src/better_backgrounds/desktop/pages.py" = [
    "PLR0915", # Declarative widget composition is clearest in page constructors.
]
"src/better_backgrounds/cli.py" = [
    "FBT002", # Typer exposes boolean options through declarative function defaults.
    "PLR0913", # CLI signatures intentionally mirror their explicit options.
]
"src/better_backgrounds/desktop/app.py" = [
    "FBT001", # The command-factory protocol passes the resume flag positionally.
]
"src/better_backgrounds/desktop/main_window.py" = [
    "PLR0913", # Constructor injection keeps native services replaceable in tests.
    "PLR0915", # Declarative window composition is clearest in the constructor.
]
"src/better_backgrounds/reconstruction_worker.py" = [
    "PLR0913", # Worker dependencies remain explicit and independently replaceable.
]

[tool.ruff.lint.isort]
known-first-party = ["better_backgrounds"]

[tool.pytest.ini_options]
addopts = "-q"
cache_dir = ".cache/pytest"
testpaths = ["tests"]
strict_config = true
strict_markers = true

[tool.ty.src]
include = ["src", "tests"]

[tool.pyside6-project]
files = [
    "src/better_backgrounds/desktop/__init__.py",
    "src/better_backgrounds/desktop/__main__.py",
    "src/better_backgrounds/desktop/app.py",
    "src/better_backgrounds/desktop/bridge.py",
    "src/better_backgrounds/desktop/main_window.py",
    "src/better_backgrounds/desktop/pages.py",
    "src/better_backgrounds/desktop/preview.py",
    "src/better_backgrounds/desktop/theme.py",
    "src/better_backgrounds/desktop/webview.py",
    "src/better_backgrounds/input_camera.py",
    "src/better_backgrounds/managed_tools.py",
    "src/better_backgrounds/pycolmap_worker.py",
    "src/better_backgrounds/reconstruction.py",
    "src/better_backgrounds/reconstruction_worker.py",
    "src/better_backgrounds/scene.py",
    "src/better_backgrounds/video_analysis.py",
]
