[project]
name = "better-backgrounds"
version = "0.1.0"
description = "Local tooling for the Better Backgrounds desktop application"
readme = "README.md"
requires-python = ">=3.14,<3.15"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "efficientnet-pytorch==0.7.1",
    "hydra-core>=1.3.4",
    "huggingface-hub>=1.24.0",
    "imageio>=2.37.3",
    "kornia==0.8.3",
    "mediapipe==0.10.35",
    "numpy>=2.5.1",
    "omegaconf>=2.3.1",
    "pillow>=12.2.0",
    "platformdirs>=4.5.1",
    "plyfile==1.1.2",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pyside6>=6.10.2",
    "scipy==1.16.2",
    "timm==1.0.20",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tqdm>=4.68.4",
    "typer>=0.21.0",
]

[project.scripts]
better-backgrounds = "better_backgrounds.cli:app"

[project.gui-scripts]
better-backgrounds-desktop = "better_backgrounds.desktop.app:main"

[dependency-groups]
dev = [
    "nuitka==4.1.3",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "ty==0.0.59",
]

[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 100
include = [
    "pyproject.toml",
    "src/**/*.py",
    "src/**/*.pyi",
    "tests/**/*.py",
    "tests/**/*.pyi",
]
extend-exclude = [
    ".cache",
    ".pytest-temp",
    ".tools",
    "src/better_backgrounds/_vendor",
    "artifacts",
    "jobs",
    "media",
    "models",
    "samples/downloads",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the formatter's handling of trailing commas.
    "D203",   # Conflicts with the preferred no-blank-line D211 convention.
    "D213",   # Conflicts with the preferred summary-on-first-line D212 convention.
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "INP001", # Tests are not an importable production package.
    "PLR2004", # Literal values keep individual test expectations explicit.
    "S101", # Assertions are pytest's native verification mechanism.
]
"src/better_backgrounds/desktop/webview.py" = [
    "N802", # Qt virtual methods use the framework's camelCase API.
    "PLR0915", # Renderer policy setup is intentionally kept in one constructor.
]
"src/better_backgrounds/desktop/pages.py" = [
    "PLR0915", # Declarative widget composition is clearest in page constructors.
]
"src/better_backgrounds/cli.py" = [
    "C901", # Worker smoke orchestration is kept beside its hidden diagnostic command.
    "FBT002", # Typer exposes boolean options through declarative function defaults.
    "PLR0913", # CLI signatures intentionally mirror their explicit options.
]
"src/better_backgrounds/compositor.py" = [
    "PLR0913", # Exact-frame evidence remains explicit at the composition boundary.
]
"src/better_backgrounds/matting_benchmark.py" = [
    "PLR0913", # Benchmark gates are explicit inputs for reproducible reports.
]
"src/better_backgrounds/matting_worker.py" = [
    "C901", # Process lifecycle and calibration share one spawn-safe entry point.
    "PLR0913", # Spawn targets receive serializable dependencies explicitly.
    "PLR0915", # Process lifecycle and calibration share one spawn-safe entry point.
]
"src/better_backgrounds/desktop/app.py" = [
    "FBT001", # The command-factory protocol passes the resume flag positionally.
]
"src/better_backgrounds/desktop/main_window.py" = [
    "PLR0913", # Constructor injection keeps native services replaceable in tests.
    "PLR0915", # Declarative window composition is clearest in the constructor.
]
"src/better_backgrounds/sharp.py" = [
    "C901", # Binary PLY parsing remains cohesive at one untrusted-file boundary.
    "PLR0912", # PLY validation branches mirror independent corruption checks.
    "PLR0913", # Build and PLY trust boundaries keep their evidence explicit.
    "PLR0915", # PLY validation remains cohesive at one managed publication boundary.
    "TRY301", # Validation failures stay beside the exact array check that found them.
]
"src/better_backgrounds/sharp_worker.py" = [
    "PLR0913", # Spawn-safe worker dependencies remain explicit and replaceable.
]
"src/better_backgrounds/sharp_runtime.py" = [
    "PLR0913", # The predictor boundary mirrors the exact inference inputs and stage callback.
]

[tool.ruff.lint.isort]
known-first-party = ["better_backgrounds"]

[tool.pytest.ini_options]
addopts = "-q"
cache_dir = ".cache/pytest"
testpaths = ["tests"]
strict_config = true
strict_markers = true

[tool.ty.src]
include = ["src", "tests"]
exclude = ["src/better_backgrounds/_vendor"]

[tool.pyside6-project]
files = [
    "src/better_backgrounds/desktop/__init__.py",
    "src/better_backgrounds/desktop/__main__.py",
    "src/better_backgrounds/desktop/app.py",
    "src/better_backgrounds/desktop/bridge.py",
    "src/better_backgrounds/desktop/camera_capture.py",
    "src/better_backgrounds/desktop/main_window.py",
    "src/better_backgrounds/desktop/pages.py",
    "src/better_backgrounds/desktop/preview.py",
    "src/better_backgrounds/desktop/theme.py",
    "src/better_backgrounds/desktop/webview.py",
    "src/better_backgrounds/desktop/live_preview.py",
    "src/better_backgrounds/harmonizer_runtime.py",
    "src/better_backgrounds/_vendor/harmonizer/__init__.py",
    "src/better_backgrounds/_vendor/harmonizer/model.py",
    "src/better_backgrounds/_vendor/harmonizer/UPSTREAM.md",
    "src/better_backgrounds/compositor.py",
    "src/better_backgrounds/frame_ring.py",
    "src/better_backgrounds/harmonization.py",
    "src/better_backgrounds/input_camera.py",
    "src/better_backgrounds/live_matting.py",
    "src/better_backgrounds/matting.py",
    "src/better_backgrounds/matanyone_runtime.py",
    "src/better_backgrounds/matting_benchmark.py",
    "src/better_backgrounds/matting_engine.py",
    "src/better_backgrounds/matting_quality.py",
    "src/better_backgrounds/matting_worker.py",
    "src/better_backgrounds/scene.py",
    "src/better_backgrounds/seed_mask.py",
    "src/better_backgrounds/sharp.py",
    "src/better_backgrounds/sharp_runtime.py",
    "src/better_backgrounds/sharp_worker.py",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
